@@ -18,6 +18,13 @@
 		<java.version>1.8</java.version>
 		<log4j2.version>2.17.1</log4j2.version>
 	</properties>
+	<repositories>
+		<repository>
+			<id>in-project</id>
+			<name>custom jars</name>
+			<url>file://${project.basedir}/src/main/resources/libs</url>
+		</repository>
+	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -173,14 +180,31 @@
             <artifactId>gson</artifactId>
             <version>2.8.9</version>
         </dependency>
-        
+	
         <dependency>
-    		<groupId>org.springframework.boot</groupId>
+		<groupId>org.springframework.boot</groupId>
     		<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
-
+	</dependency>
+		
+        <dependency>
+			<groupId>niceid</groupId>
+			<artifactId>NiceID</artifactId>
+			<version>1.0.1</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>ibm</groupId>
+			<artifactId>ibmjceprovider</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>ibm</groupId>
+			<artifactId>ibmpkcs</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -207,6 +231,9 @@
                     <configuration>
                         <outputDirectory>target/generated-sources/java</outputDirectory>
                         <processor>com.querydsl.apt.jpa.JPAAnnotationProcessor</processor>
+                        <compilerArgs>
+	                        <arg>--add-exports=java.base/com.sun.crypto.provider=ALL-UNNAMED</arg>
+	                    </compilerArgs>
                     </configuration>
                 </execution>
             </executions>
